// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Evaluation status renders a failed status 1`] = `
<Label
  color="red"
  icon={
    <ErrorCircleOIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Failed
  </span>
</Label>
`;

exports[`Evaluation status renders a not evaluated status 1`] = `
<Label
  color="red"
  icon={
    <MinusCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Not evaluated
  </span>
</Label>
`;

exports[`Evaluation status renders a skipped status 1`] = `
<Label
  color="red"
  icon={
    <FastForwardIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Skipped
  </span>
</Label>
`;

exports[`Evaluation status renders a succeeded status 1`] = `
<Label
  color="green"
  icon={
    <CheckCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Succeeded
  </span>
</Label>
`;

exports[`Evaluation status renders an evaluating status 1`] = `
<Label
  color="orange"
  icon={
    <HourglassHalfIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  }
>
  <span>
    Evaluating
  </span>
</Label>
`;
